[tool.poetry]
name = "pet-forest"
version = "0.1.0"
description = ""
authors = ["Zykie Rallos <zykie1018@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_forest"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
